tests/conformance/invalid/output_semantics_no_declarada.svp
codomain K3 = { APTO, NO_APTO, INDETERMINADO };

cellspec C1 {
  b: 3;
  codomain: K3;
  semantics: SemK3Ausente;
  role: Base;
}
